# ProyectoMLOps

./: .dockerignore  Dockerfile  README.md  index.html  mlflow.db  mlflow_comparativa.txt  model_stroke.ipynb  model_tracking.ipynb  pipeline.py  pyproject.toml
app/: app.py
data/processed/: X_test.pkl  X_train.pkl  y_test.pkl  y_train.pkl
mlartifacts/5/models/m-333f869de5d64044846dd3fa01fe3832/artifacts/: MLmodel
mlartifacts/5/models/m-afe6ddc0aa8342f6af877d7713da7758/artifacts/: MLmodel  conda.yaml
mlruns/1/models/m-34cb54772c024a71b6fc7ad095b00aa9/artifacts/: MLmodel
mlruns/1/models/m-46b93f7ec60148d0b35820108f1dbd34/artifacts/: MLmodel
mlruns/1/models/m-492ed3014455448cb9fa647afa853ede/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-88687cf645784177a98108224acb36e7/artifacts/: MLmodel
mlruns/1/models/m-d1997cf39aa64f29ae731f3476811d91/artifacts/: MLmodel
mlruns/1/models/m-da4841d4f0b24dfb941149d14a9dbc86/artifacts/: MLmodel  requirements.txt
mlruns/3/models/m-58e65488839d472dbeb56fe7222a9f72/artifacts/: MLmodel
mlruns/3/models/m-78bfb046409d439db63a1f805f5a8e8a/artifacts/: MLmodel  conda.yaml  model.pkl
mlruns/3/models/m-7d8be3d38bf84edd996fc1d64fd9bacb/artifacts/: MLmodel  model.pkl
mlruns/3/models/m-f40f017d36a640c1a152e91ac11409d4/artifacts/: MLmodel  model.pkl
mlruns/4/models/m-09a3418f80a646d0a9085d36589d9186/artifacts/: MLmodel
model/: metadata.json
model/model/: MLmodel  requirements.txt
notebooks/: EDA_trabajofinal.ipynb  model_stroke.ipynb
scripts/: copy_model.py  main.py  pipeline.py  preprocess.py  train.py
(+3 files in other folders)
