[project]
name = "my-first-env-with-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "matplotlib>=3.10.8",
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=2.3.1",
    "plotly-express>=0.4.1",
    "prefect>=3.6.26",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "black>=23.0.0",      # Formateador de código
    "flake8>=6.0.0",      # Linter
    "jupyter>=1.0.0",     # Notebooks
]

test = [
    "pytest>=7.0.0",     # Testing framework
    "pytest-cov>=4.0.0",  # Cobertura de pruebas
]
